# Configure script for libada.
#   Copyright 2003 Free Software Foundation, Inc.
#
# This file is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.

# Please keep the version number in sync with the general GCC version.
AC_INIT([GCC libada],[experimental pre-3.5])

# This is an autoconf 2.5x script.
AC_PREREQ([2.57])

# Output: create a Makefile.
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
